[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = {version = "0.7", features = ["alloc", "byteorder"]}
zerocopy-derive = "0.7"
nom = {version = "7", default-features = false, features = ["alloc"]}
num_enum = "0.7"